tests-integration/fixtures/checking/1777708860_local_instance_conflict/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
classInt :: Int
test :: Array Int

Types
Class :: Type -> Constraint

Classes
class forall (a :: Type). Class (a :: Type)

Instances
instance Class

Diagnostics
error[InstanceHeadMismatch]: Instance head mismatch: expected 1 arguments, got 0
  --> 1:1..9:18
  |
1 | module Main where
  | ^~~~~~~~~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type -> Constraint' with 'Constraint'
  --> 1:1..9:18
  |
1 | module Main where
  | ^~~~~~~~~~~~~~~~~
